--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,3 +1,5 @@
+// @import "../bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap.scss";
+
 
 body {
     padding-top: 50px;
@@ -42,7 +44,7 @@ body {
 ===============================*/
 
 #main-wrapper {
-  width: 94.66666667%;
+  width: 95.66666667%;
     /*height: 100%;*/
     overflow-y: auto;
     /*padding: 50px 0 0px 0;*/
@@ -61,8 +63,10 @@ body {
 
 #sidebar-wrapper {
     height: 100%;
-    width: 6.33333333%;
+    width: 5.33333333%;
     /*padding: 50px 0 0px 0;*/
+    background-color: yellow;
+    border-right:1px solid #d2d2d2;
     padding: 0;
     position: fixed;
 }
