--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -8,8 +8,8 @@
 body {
     padding-top: 50px;
     overflow: hidden;
-    // font-family: 'Lato', sans-serif;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
+    // font-family: 'Open Sans', sans-serif;
     // background-color: #202438;
 }
 #wrapper {
@@ -39,6 +39,7 @@ body {
 }
 @media (max-width: 992px) {
   //   #sidebar-wrapper {
+
   //       position: static;
   //       height:auto;
   //       max-height: 300px;
@@ -125,12 +126,16 @@ h1 {
   /*padding: 50px 0 0px 0;*/
   // background-color: #233445;
   // background-color: #403C68;
-  background-color: #283741;
+  background-color: #313C3F;
   // border-right:1px solid #d2d2d2;
   padding: 0;
   // position: fixed;
   position: relative;
   // overflow-y: auto;
+
+  // li:first-child {
+  //   padding-top: 15px;
+  // }
 
   nav {
     .badge {
@@ -138,6 +143,21 @@ h1 {
       z-index: 1;
       padding: 0;
       background: none;
+    }
+  }
+
+  a {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    font-size: inherit;
+    color: #fff;
+    line-height: 40px;
+    // text-shadow: 1px 1px 0 rgba(108, 158, 136, 0.9);
+    transition: all .1s ease-in-out;
+    &:hover {
+      // color: #d2d2d2;
+      text-decoration: none;
     }
   }
 }
@@ -148,6 +168,7 @@ h1 {
 
 #app-sections {
   // width: 80px;
+  // background-color: #4A9E76;
 
   li:first-child {
     padding-top: 15px;
@@ -159,17 +180,63 @@ h1 {
 
   a {
     display: inline-block;
+    text-align: left;
     width: 100%;
-    text-align: center;
     font-size: inherit;
-    color: #fff;
-    line-height: 60px;
+    color: #848484;
+    line-height: 40px;
     transition: all .1s ease-in-out;
     &:hover {
-      color: #5FA894;
+      // color: #d2d2d2;
       text-decoration: none;
     }
   }
+}
+
+
+/*===============================
+  Tab Sections
+===============================*/
+
+#tab-sections {
+  padding-top: 120px;
+
+  li.active {
+    a {
+      opacity: 1;
+    }
+  }
+
+
+  a {
+    font-size: 1.3em;
+    font-weight: 300;
+    color: #fff;
+    // opacity: 0.4;
+    // text-shadow: 1px 0 0 rgba(108, 158, 136, 0.3);
+    // letter-spacing: 0.06em;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    span {
+      // display: none;
+    }
+  }
+}
+
+.TemplateColor {
+  // color: #F1672C;
+  background-color: #BB675D;
+}
+
+.StylesColor {
+  background-color: #6296BE;
+}
+
+.ScriptColor {
+  background-color: #BDA164;
 }
 
 /*===============================
